# AlmostHuman.ai

./: .env.example  .gitignore  README.md  inspect_db.py  pyproject.toml  test_db.py  test_gpt41_convo_sim.py
app/: main.py  test
app/api/: routes.py
app/api/endpoints/: appointments.py  hello.py  voice_loop.py
app/clients/: interfaces.py  llm_blackbox.py  modulate_client.py  tts_blackbox.py  tts_free.py
app/core/: config.py  database.py
app/data/: rules.json
app/models/: conversation.py
app/repositories/: conversation_repository.py  session_store.py
app/schemas/: voice_loop.py
app/services/: appointment_answers.py  appointment_manager.py  voice_loop_service.py
app/utils/: gemini_analyzer.py
frontend/: app.js  index.html  styles.css
