[project]
name = "almosthuman-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "dotenv>=0.9.9",
    "fastapi>=0.129.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
