[project]
name = "almosthuman-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "edge-tts>=7.2.3",
    "fastapi>=0.129.1",
    "greenlet>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
